--- a/css-grid.html
+++ b/css-grid.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CSS Grid</title>
-        <link rel="stylesheet" type="text/css" href="C:\Users\Dell 7440\Desktop\Program\css\css-grid.css">
+        <link rel="stylesheet" type="text/css" href="css-grid.css">
     </head>
     <body>
         <div class="container">
