--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     </head>
     <body>
         <div class="container">
-            <div class="zone green"><img src="C:\Users\Dell 7440\Bluetooth\Gorilla.jpg" alt="Gorilla"/></div>
-            <div class="zone red"> <img src="C:\Users\Dell 7440\Bluetooth\Antelope.jpg" alt="Antelope"/></div>
-            <div class="zone blue"> <img src="C:\Users\Dell 7440\Bluetooth\Cub1.jpg" alt="Cub1"/></div>
-            <div class="zone yellow"> <img src="C:\Users\Dell 7440\Bluetooth\Elephant.jpg" alt="elephant"/></div>
-            <div class="zone purple"> <img src="C:\Users\Dell 7440\Bluetooth\Fish.jpg" alt="fish"/></div>
-            <div class="zone brown"><img src="C:\Users\Dell 7440\Bluetooth\Antelopes.jpg" alt="Antelopes"/></diV>
-            <div class="zone green"> <img src="C:\Users\Dell 7440\Bluetooth\Cub.jpg" alt="Cub"/></div>
-            <div class="zone red"><img src="C:\Users\Dell 7440\Bluetooth\Yello Python.jpg" alt="yellow python"/></div>
-            <div class="zone blue"><img src="C:\Users\Dell 7440\Bluetooth\Coral.jpg" alt="Coral"/></div>
-            <div class="zone yellow"><img src="C:\Users\Dell 7440\Bluetooth\Giraffe.jpg" alt="giraffe"/></div>
-            <div class="zone purple"><img src="C:\Users\Dell 7440\Bluetooth\Horses.jpg" alt="horses"/></div>
-            <div class="zone brown"><img src="C:\Users\Dell 7440\Bluetooth\Kruger.jpg" alt="kruger"/></div>
+            <div class="zone green"><img src="img/Gorilla.jpg" alt="Gorilla"/></div>
+            <div class="zone red"> <img src="img/Antelope.jpg" alt="Antelope"/></div>
+            <div class="zone blue"> <img src="img/Cub1.jpg" alt="Cub1"/></div>
+            <div class="zone yellow"> <img src="img/Elephant.jpg" alt="elephant"/></div>
+            <div class="zone purple"> <img src="img/Fish.jpg" alt="fish"/></div>
+            <div class="zone brown"><img src="img/Antelopes.jpg" alt="Antelopes"/></diV>
+            <div class="zone green"> <img src="img/Cub.jpg" alt="Cub"/></div>
+            <div class="zone red"><img src="img/Yello Python.jpg" alt="yellow python"/></div>
+            <div class="zone blue"><img src="img/Coral.jpg" alt="Coral"/></div>
+            <div class="zone yellow"><img src="img/Giraffe.jpg" alt="giraffe"/></div>
+            <div class="zone purple"><img src="img/Horses.jpg" alt="horses"/></div>
+            <div class="zone brown"><img src="img/Kruger.jpg" alt="kruger"/></div>
         </div>
     </body>
 </html>
